Repair invisible a:hover problem

--- a/css/style.scss
+++ b/css/style.scss
@@ -399,6 +399,10 @@ footer li {
 		  color:#CCC;
 	}
 
+	a:hover {
+		color:#bfb
+	}
+
 
 	.section-grey {	background-color:#555; color:#eee;}
 	.section-orange {	background-color:#f1852d; color:#ffffff;}
